# pico-midi-16

./: .gitignore  CMakeLists.txt  main.c
bld/: CMakeCache.txt  Makefile  cmake_install.cmake  main.dis  main.elf  main.elf.map  main.hex  main.uf2
bld/components/controls/: Makefile  cmake_install.cmake
bld/components/lcd/: Makefile  cmake_install.cmake
bld/components/midi_usb/: Makefile  cmake_install.cmake
bld/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
bld/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
bld/freertos/: Makefile  cmake_install.cmake
bld/pico-sdk/: Makefile  cmake_install.cmake
bld/pico-sdk/docs/: Makefile  cmake_install.cmake
bld/pico-sdk/src/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
bld/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
bld/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
bld/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
bld/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
bld/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
bld/pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default_padded_checksummed.S  cmake_install.cmake
bld/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
bld/pico-sdk/tools/: Makefile  cmake_install.cmake
components/controls/: CMakeLists.txt  controls.c  controls.h
components/lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_os.c  lcd_os.h
components/midi_usb/: CMakeLists.txt  midi_usb.c  midi_usb.h
components/mux/: CMakeLists.txt  mux.c  mux.h
components/pico-mux/: CMakeLists.txt  pico-mux.c  pico-mux.h
components/types/: types.h
freertos/: CMakeLists.txt
(+102 files in other folders)
